needed to use flex basis in training session list to make sure each list item is aligned

--- a/server/public/styles.css
+++ b/server/public/styles.css
@@ -438,6 +438,26 @@ a:hover {
   left: 45%;
 }
 
+@media only screen and (max-width: 730px) {
+  .flex-basis-40 {
+    flex-basis: 65%;
+  }
+
+  .width-80 {
+    width: 55%;
+  }
+}
+
+@media only screen and (max-width: 584px) {
+  .flex-basis-40 {
+    flex-basis: 75%;
+  }
+
+  .width-80 {
+    width: 75%;
+  }
+}
+
 @media only screen and (max-width: 376px) {
   input {
     border: 1px solid #999;
